--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Meeting Begin View Controller-->
         <scene sceneID="6Em-2W-mJp">
             <objects>
-                <viewController id="2QN-cd-kZ6" sceneMemberID="viewController">
+                <viewController id="2QN-cd-kZ6" customClass="MeetingBeginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I6a-SI-vav"/>
                         <viewControllerLayoutGuide type="bottom" id="ZpO-UQ-xoh"/>
